fixing sonarqube flags